fixing translations formatting

--- a/config/skills.yml
+++ b/config/skills.yml
@@ -1,19 +1,19 @@
 ---
-  - title: 'Ruby on Rails'
+  - name: 'rails'
+    title: 'Ruby on Rails'
     icon_url: 'https://res.cloudinary.com/rodrigopk/image/upload/v1/1/original/rails.png'
-    description: 'templates.about.skills.description.rails'
-  - title: 'AngularJS'
+  - name: 'angular'
+    title: 'AngularJS'
     icon_url: 'https://res.cloudinary.com/rodrigopk/image/upload/v1/2/original/angularjs.png'
-    description: 'templates.about.skills.description.angular'
-  - title: 'Swift'
+  - name: 'swift'
+    title: 'Swift'
     icon_url: 'https://res.cloudinary.com/rodrigopk/image/upload/v1/3/original/swift.png'
-    description: 'templates.about.skills.description.swift'
-  - title: 'C++'
+  - name: 'cpp'
+    title: 'C++'
     icon_url: 'https://res.cloudinary.com/rodrigopk/image/upload/v1/4/original/cpp.png'
-    description: 'templates.about.skills.description.cpp'
-  - title: 'Git'
+  - name: 'git'
+    title: 'Git'
     icon_url: 'https://res.cloudinary.com/rodrigopk/image/upload/v1/5/original/git.png'
-    description: 'templates.about.skills.description.git'
-  - title: 'Scrum'
+  - name: 'scrum'
+    title: 'Scrum'
     icon_url: 'https://res.cloudinary.com/rodrigopk/image/upload/v1/6/original/scrum.png'
-    description: 'templates.about.skills.description.scrum'
