Add NetworkProfiles helper

--- a/.env.development
+++ b/.env.development
@@ -5,3 +5,7 @@ WEB_SESSIONS_SECRET="16182a3e8ef0b6e900c6b4a3381a63ef9b975e8aa30a9a8109989f3325c
 
 CURRENT_PHONE="+49 1623253797"
 CURRENT_EMAIL=rodrigopk@gmail.com
+
+GITHUB_URL=https://github.com/rodrigopk
+LINKEDIN_URL=https://www.linkedin.com/in/rodrigo-vasconcelos-de-barros
+TWITTER_URL=https://twitter.com/_rodrigopk
