--- a/.env.test
+++ b/.env.test
@@ -5,3 +5,7 @@ WEB_SESSIONS_SECRET="a387fd2a7027797f693f768c742e723bcf39d7a24c87239a224fef56984
 
 CURRENT_PHONE="+49 1623253797"
 CURRENT_EMAIL=rodrigopk@gmail.com
+
+GITHUB_URL=https://github.com/rodrigopk
+LINKEDIN_URL=https://www.linkedin.com/in/rodrigo-vasconcelos-de-barros
+TWITTER_URL=https://twitter.com/_rodrigopk
