F[ikoufW1v]: Replace twitter with mastodon profile

--- a/.env.development
+++ b/.env.development
@@ -8,4 +8,4 @@ CURRENT_EMAIL=rodrigopk@gmail.com
 
 GITHUB_URL=https://github.com/rodrigopk
 LINKEDIN_URL=https://www.linkedin.com/in/rodrigo-vasconcelos-de-barros
-TWITTER_URL=https://twitter.com/_rodrigopk
+MASTODON_URL=https://ruby.social/@rodrigopk
