F[ikoufW1v]: Add medium network profile

--- a/.env.development
+++ b/.env.development
@@ -9,3 +9,4 @@ CURRENT_EMAIL=rodrigopk@gmail.com
 GITHUB_URL=https://github.com/rodrigopk
 LINKEDIN_URL=https://www.linkedin.com/in/rodrigo-vasconcelos-de-barros
 MASTODON_URL=https://ruby.social/@rodrigopk
+MEDIUM_URL=https://medium.com/@rodrigopk
