F[ikoufW1v]: Update skills

--- a/config/skills.yml
+++ b/config/skills.yml
@@ -1,19 +1,22 @@
 ---
+  - name: 'ruby'
+    title: 'Ruby'
+    icon_url: 'https://res.cloudinary.com/rodrigopk/image/upload/v1554031872/seed_data/ruby-icon.png'
   - name: 'rails'
     title: 'Ruby on Rails'
     icon_url: 'https://res.cloudinary.com/rodrigopk/image/upload/v1/1/original/rails.png'
-  - name: 'angular'
-    title: 'AngularJS'
-    icon_url: 'https://res.cloudinary.com/rodrigopk/image/upload/v1/2/original/angularjs.png'
-  - name: 'swift'
-    title: 'Swift'
-    icon_url: 'https://res.cloudinary.com/rodrigopk/image/upload/v1/3/original/swift.png'
+  - name: 'hanami'
+    title: 'Hanami'
+    icon_url: 'https://res.cloudinary.com/rodrigopk/image/upload/v1554030735/seed_data/hanami-icon.png'
+  - name: 'javascript'
+    title: 'Javascript'
+    icon_url: 'https://res.cloudinary.com/rodrigopk/image/upload/v1554031872/seed_data/javascript-icon.png'
+  - name: 'react'
+    title: 'React'
+    icon_url: 'https://res.cloudinary.com/rodrigopk/image/upload/v1554031125/seed_data/react.png'
   - name: 'git'
     title: 'Git'
     icon_url: 'https://res.cloudinary.com/rodrigopk/image/upload/v1/5/original/git.png'
   - name: 'scrum'
     title: 'Scrum'
     icon_url: 'https://res.cloudinary.com/rodrigopk/image/upload/v1/6/original/scrum.png'
-  - name: 'cpp'
-    title: 'C++'
-    icon_url: 'https://res.cloudinary.com/rodrigopk/image/upload/v1/4/original/cpp.png'
